[package]
name = "omegler-chatserver"
version = "0.1.0"
authors = ["arades79 <scravers@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
crossbeam = "0.8.0"
evmap = "10.0.2"
rand = "0.8.3"
tokio = { version = "1.5.0", features = ["sync"] }
